# pkmn-draft

./: .gitignore  Cargo.toml  README.md  todo.txt
data/: draft_sets.txt
data/all_stars/: draft_sets.txt
data/all_stars/generated_stats/: 0.html  10.html  100.html  106.html  107.html  109.html  11.html  112.html  116.html  117.html  119.html  122.html  123.html  124.html  125.html  126.html  127.html  133.html  134.html  137.html  138.html  140.html  141.html  143.html  145.html  147.html  148.html  15.html  150.html  158.html  159.html  16.html  160.html  161.html  163.html  165.html  171.html  173.html  176.html  181.html  (+55 more)
data/gen_1/: draft_sets.txt
data/gen_1/generated_stats/: 1.html  10.html  101.html  103.html  104.html  106.html  107.html  108.html  109.html  11.html  110.html  (+132 more)
data/generated_stats/: 1.html  101.html  102.html  103.html  104.html  105.html  108.html  110.html  111.html  115.html  118.html  120.html  121.html  128.html  129.html  13.html  130.html  132.html  135.html  136.html  139.html  14.html  142.html  144.html  146.html  149.html  154.html  155.html  157.html  162.html  166.html  167.html  169.html  170.html  172.html  175.html  177.html  179.html  180.html  183.html  (+64 more)
js/: package-lock.json  package.json  webpack.config.js
js/src/: draft.html
scripts/: build_js.sh  draft_parser.py  pokepaste_parser.py  yolo_parser.py
src/: draft_database.rs  draft_engine.rs  lobby_manager.rs  main.rs  routes.rs
www/: draft_template.html  join_game_template.html  share_game_template.html
www/static/: battle_basics.html  how_to.html  index.html
(+2 files in other folders)
