[package]
name = "pkmn-draft"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
warp = {version = "0.3.2", features = ["tls"]}
rand = {version = "0.5.0"}
handlebars = {version = "4.3.5"}
serde = {version = "1.0.151"}
serde_json = {version = "1.0.91"}
serde_derive = {version = "1.0.151"}
simple_logger = {version = "4.0.0"}
log = {version = "0.4.17"}
timer = {version = "0.2.0"}
chrono = {version = "0.4.23"}
html2text = {version = "0.4.4"}
